web-view/deployment-show-logs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-web-view
spec:
  template:
    spec:
      containers:
        - name: kube-web-view
          args:
            - --port=8080
            - --show-container-logs
